[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.black]
color = true
line-length = 88
target-version = ['py310']

[tool.isort]
combine_as_imports = true
include_trailing_comma = true
line_length = 88
multi_line_output = 3
profile = "black"

[tool.mypy]
check_untyped_defs = true
disallow_any_decorated = false
disallow_any_explicit = false
disallow_any_expr = false
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_subclassing_any = false
disallow_untyped_calls = true
disallow_untyped_defs = true
explicit_package_bases = true
ignore_missing_imports = true
namespace_packages = true
no_implicit_optional = true
no_implicit_reexport = true
python_version = "3.10"
show_error_codes = true
strict_concatenate = true
strict_equality = true
strict_optional = true
warn_no_return = true
warn_redundant_casts = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

[tool.poetry]
name = "cassini"
version = "0.1.0"
description = "Web Application to compute routes durations"
authors = ["Jocelyn Gas <jocelyn.gas@dillygence.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.*"
streamlit = "^1.16.0"
pydantic = "^1.10.4"
pandas = "^1.5.2"
xlsxwriter = "^3.0.6"

[tool.poetry.group.dev.dependencies]
ruff = "^0.0.213"
pytest = "^7.2.0"
coverage = "^7.0.3"
black = "^22.12.0"
isort = "^5.11.4"

[tool.ruff]
extend-select = ["Q"]
line-length = 88
target-version = "py310"
